Added annoying warnings to every place where <a href> is jammed into an HTML widget thereby breaking Whirled on IE and any other browser that needs behind the scenes magic to make # links work. We can either stop doing this, stop supporting IE, or write some code that takes an arbitrary chunk of HTML and splits it into a FlowPanel that contains Label, Hyperlink, Label, etc.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -161,6 +161,7 @@ optOutSuccessful = {0} will no longer receive email from whirled.com
 
 optOutOpting = Turning off announcement emails...
 optOutOptedOut = Announcement emails will no longer be sent to {0}.
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 optOutReenable = You can configure all Whirled email preferences on the Me -> \
   <a href="#me-account">Account</a> page.
 
