--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -62,6 +62,7 @@ galaxySearchTitle = Search Groups
 
 galaxyIntroBlurb = Groups are a fun way to build your own virtual world.  Create a group hall, \
   gather friends, post discussions and throw parties!
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 galaxyIntroCreate = Think you''ve got what it takes to create \
   the next hot hangout on Whirled?  <a href="#groups-edit">Make your own Group!</a>
 
