--- a/src/gwt/client/help/HelpMessages.properties
+++ b/src/gwt/client/help/HelpMessages.properties
@@ -6,6 +6,7 @@
 #
 # HelpPanel
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 helpIntro = <h2>Thank you</h2> for helping us test out Whirled! It is still a work in \
   progress, so bugs are bound to pop up every now and then.  We appreciate your \
   <a href="#groups-f_72">bug reports</a> and <a href="#groups-f_19">feedback</a>.
@@ -16,10 +17,12 @@ helpWiki = The <a href="http://wiki.whirled.com">Whirled Wiki</a> is your source
   create avatars, pets, toys and games.
 
 helpQuestionsTitle = Frequently Asked Questions
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 helpQuestionsIntro = If you have questions you don''t see answered here, check out the \
   <a href="http://wiki.whirled.com/Frequently_asked_questions">Whirled Wiki FAQ</a> \
   or the <a href="#groups-f_19">Brave New Whirled</a> message boards to ask \
   a specific question and someone will help you out!
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 helpQuestions = <h3>What is Whirled?</h3> <ul> \
   <li>Whirled is a place where you can play <a href="#games">games</a>, make \
   <a href="#people">friends</a> and design your own <a href="#world-home">rooms</a>. \
