--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -30,22 +30,26 @@ landingHelp = Help
 #
 # DeviantArt contest winners page
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 dawinnersIntro = We received so many amazing entries for our first "Design Your Whirled" \
   Contest, that we are going to do this every month!  Look out for our next \
   <a href="#me-contests">new contest</a> with more great prizes coming out in December! 
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 dawinnersWinner1 = <p> \
   <img src="/images/landing/contests/dawinners_prize_1.png" style="float: right"/> \
   We love <a href="#world-s107217">Little Red''s Forest</a> because of the beautifully executed \
   artwork and its "Choose Your Own Adventure" story element. Be sure to check out the different \
   routes to Grandma''s house! <br style="clear: both;"/></p>
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 dawinnersWinner2 = <p> \
   <img src="/images/landing/contests/dawinners_prize_2.png" style="float: right"/> \
   Who could resist this fantastic ride through Whirled? The extensive detail \
   and clever use of moving backdrops are what makes <a href="#world-s119439">Whirled Train \
   Ride</a> one of our top picks! <br style="clear: both;"/></p>
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 dawinnersWinner3 = <p> \
   <img src="/images/landing/contests/dawinners_prize_3.png" style="float: right"/> \
   With so many interesting rooms, you could spend hours exploring <a href="#world-s89294">Little \
@@ -54,6 +58,7 @@ dawinnersWinner3 = <p> \
   
 dawinnersHonorable = All Honorable Mentions will receive a Whirled T-shirt and stickers.
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 dawinnersOthersLeft = \
   <a href="#world-s93060">My Whirled</a> by bogo the hobo<br/> \
   <a href="#world-s100228">Whirled Project Entry</a> by Jeishii<br/> \
@@ -79,6 +84,7 @@ dawinnersOthersLeft = \
   <a href="#world-s13758">Wild Whirled West</a> by Nordenx<br/> \
   <a href="#world-s114029">Iron Man''s Not So Secret Lair</a> by Tony Stark<br/>
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 dawinnersOthersRight = \
   <a href="#world-s63052">Spam Cabin</a> by Whitehawk<br/> \
   <a href="#world-s15817">Blue Screen of Hope</a> by Tonic<br/> \
@@ -114,6 +120,7 @@ featuredGroupOnline = {0} online now!
 # Game Contest panel
 
 gameconOverviewTitle = Overview
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 gameconOverviewText = <p><a href="#landing">Whirled</a> \
   is a complete, self-serve Flash game development platform. Using Whirled it is \
   possible to create and charge for virtual items, single and multiplayer games, \
@@ -247,6 +254,7 @@ roomsTagline = Play games.  Make friends.<br/>  Make stuff.
 # Design Your Whirled contest landing page
 
 designconIntroTitle = About the Contest
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 designconIntroText = <p><a href="#landing">Whirled</a> is a virtual playland where you can let \
   your imagination run wild. Ever wanted to live in a world of your own? Now''s your chance! \
   We are challenging you to create the coolest, best looking, most fun space in all of Whirled. \
@@ -283,6 +291,7 @@ designconEnterText = <img src="/images/landing/contests/designcon_howtoenter.jpg
   page</a></p>
   
 designconRulesTitle = Rules and Judging
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 designconRulesText = \
   <ul> \
     <li>Entrants must be 13 years old or older to participate in the Design Your Whirled \
