--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -58,6 +58,7 @@ nextFindTip = Search by real name, Whirled name or email address.
 
 nextFriendClick = Click a friend to visit!
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 nextGreeters = <a href="/#people-friendly">Friendly People</a>
 
 nextPassportTip = Click "GO" on these Whirled Passport stamps to go right to the fun, and earn \
@@ -93,6 +94,7 @@ passportSelectionInstructions = Click on an earned award below to display it on 
 #
 # Transaction history
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 tipCoins = Coins are earned by playing most <a href="/#games">games</a>, selling items in the \
   <a href="/#shop">shop</a> or earning <a href="/#me-passport">passport stamps</a>. \
   <a href="http://wiki.whirled.com/Coins">Learn more about coins</a>.
@@ -190,6 +192,7 @@ dacontestRules = <p>Entrants must be 13 years old or older to participate in the
   <a href="http://wiki.whirled.com/DeviantArt_Contest">Please see this page \
   for additional terms and conditions.</a>
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 dacontestJudging = Contest entries will be judged based on technical skill, originality, and \
   creativity.<br /><br /><br />\
   <b>Judges:</b> <a href="#people-8">Cleaver: CEO and Hand-waver</a>, <br />\
