--- a/src/gwt/client/msgs/MsgsMessages.properties
+++ b/src/gwt/client/msgs/MsgsMessages.properties
@@ -72,6 +72,7 @@ msgNewThreadPosted = New thread posted.
 
 noThreads = There are no discussion threads.
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 noUnreadThreads = None of the groups of which you are a member have new discussion \
   messages.<br/><br/>You can go to the <a href="#groups">groups</a> \
   page to find and join new groups or to read old messages.
