--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -7,6 +7,7 @@
 # Feeds
 
 headerFeed = My News
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 emptyFeedNoFriends = This shows what your friends have been up to. Explore \
   <a href="#groups">groups</a> and play <a href="#games">Games</a> to meet new friends!
 emptyFeed = This shows what your friends have been up to on Whirled. \
