--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -89,8 +89,10 @@ catIntro15 = Not used.
 #
 # Item tips
 
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 getStuffBuy1 = Buy an image in the shop and use it on your <a href="#people-me">Profile</a> or \
   to <a href="http://wiki.whirled.com/Edit_Your_Room">decorate a room</a>.
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 getStuffCreate1 = Create a <a href="#people-create">gallery</a> to show off your photos and \
   artwork to the world.
 
@@ -111,18 +113,22 @@ getStuffCreate4 = Check out the <a href="http://wiki.whirled.com/Create_Games">g
 
 getStuffBuy5 = Buy an avatar in the shop.  Choose a \
   <a href="http://wiki.whirled.com/Remixable_avatar">remixable</a> one to make it unique.
+# NOTE: in-Whirled links in translation messages are bad, they break on IE, don't do this!
 getStuffCreate5 = Make and upload your own \
   <a href="http://wiki.whirled.com/Create_Avatars">avatars</a>, then sell them in the \
   <a href="#shop-5">Shop</a> for coins!
 
 getStuffBuy6 = Buy a pet in the shop.  Choose a \
   <a href="http://wiki.whirled.com/Remixable_item">remixable</a> one to make it unique.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
 getStuffCreate6 = Make and upload your own \
   <a href="http://wiki.whirled.com/Create_Pets">pets</a>.  You can even sell them in the \
   <a href="#shop-6">Shop</a>!
 
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
 getStuffBuy7 = Buy music in the shop and <a href="http://wiki.whirled.com/Edit_Your_Room">add \
   it to your room</a> to set the mood.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
 getStuffCreate7 = Upload a song and and <a href="#mail">mail it as a gift</a> to a friend, \
   or sell it in the <a href="#shop-7">Shop</a>!
 
@@ -138,6 +144,7 @@ getStuffCreate9 = Check out our tutorial on \
 
 getStuffBuy10 = Buy a toy and <a href="http://wiki.whirled.com/Edit_Your_Room">add it to your \
   room</a> for your guests to play with.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
 getStuffCreate10 = Check out the <a href="http://wiki.whirled.com/Create_Toys">toy \
   making tutorials</a>, then sell your toys in the <a href="#shop-10">Shop</a>.
 
@@ -172,6 +179,7 @@ editorWikiLink15 =
 #
 # Image Editing blurb (top below divider)
 
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
 editorBlurb1 = Images must be GIF, PNG or JPG format.  You can add them to \
   <a href="#world-home">your room</a> like furniture, or create a \
   <a href="#people-create">Gallery</a> to display them.  Animated GIFs don''t work inside rooms.
@@ -187,11 +195,13 @@ editorBlurb5 = Avatars are usually SWF files. If you want to upload a plain imag
 editorBlurb6 = Pets are animated characters that wander rooms, change moods, and \
   interact with players. Pets can only be SWF files. If you upload an image, we can convert it \
   into a cheesy bouncing pet (you can change a few settings).
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
 editorBlurb7 = Music and sound effects can be added to <a href="#world-home">your room</a>, \
   and must be MP3 format.
 editorBlurb8 = Videos can be from YouTube, or FLV video files.
 editorBlurb9 = Backdrops can be images (GIF, PNG, or JPG format images) or Flash SWF files.  \
   For animation, use SWF format as GIFs won''t be animated inside of rooms.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
 editorBlurb10 = Toys in Whirled are interactive, so they can only be SWF files.  If you want \
   to create a picture of a toy that doesn''t move, create <a href="#stuff-c_3">Furniture</a> \
   instead.
@@ -349,16 +359,24 @@ passportCategory_creation = Create
 #
 # Money transaction messages
 
-m_item_bought = Purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
-m_item_magicfree = Magic-purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
-m_change_received = Received change from purchase of <a href="/#shop-l_{1}_{2}">{0}</a>.
-m_item_sold = Sold <a href="/#shop-l_{1}_{2}">{0}</a>.
-m_item_affiliate = Referred player <a href="/#people-{1}">{0}</a> purchased an item.
-m_item_charity = The player <a href="/#people-{1}">{0}</a> made a donation while purchasing an item.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
+m_item_bought = Purchased <a href="#shop-l_{1}_{2}">{0}</a>.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
+m_item_magicfree = Magic-purchased <a href="#shop-l_{1}_{2}">{0}</a>.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
+m_change_received = Received change from purchase of <a href="#shop-l_{1}_{2}">{0}</a>.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
+m_item_sold = Sold <a href="#shop-l_{1}_{2}">{0}</a>.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
+m_item_affiliate = Referred player <a href="#people-{1}">{0}</a> purchased an item.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
+m_item_charity = The player <a href="#people-{1}">{0}</a> made a donation while purchasing an item.
 m_item_refund = Refund received for {0}.
 m_item_refunded = Issued refund for {0}.
-m_played_game = Award from playing <a href="/#games-d_{1}">{0}</a>.
-m_invited_friend_joined = Award for inviting <a href="/people-{1}">{0}</a> to Whirled.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
+m_played_game = Award from playing <a href="#games-d_{1}">{0}</a>.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
+m_invited_friend_joined = Award for inviting <a href="#people-{1}">{0}</a> to Whirled.
 m_transfer_from_guest = Transferred coins from your guest account when you registered.
 m_created_account = Some coins for you to start with. Welcome to Whirled!
 m_created_profile = Award for setting up your profile.
@@ -369,8 +387,10 @@ m_exchanged_for_bars = Exchanged for bars.
 m_exchanged_from_bling = Exchanged from bling.
 m_cancel_cash_out = Bling cash out canceled: {0}.
 m_request_cash_out = A request to cash out {0} bling has been submitted.
-m_support_adjust = Adjustment made by Whirled staff, <a href="/#people-{1}">{0}</a>.
-m_game_plays_bling_awarded = Game developer bling pool award for <a href="/#games-d_{0}">{1}</a>.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
+m_support_adjust = Adjustment made by Whirled staff, <a href="#people-{1}">{0}</a>.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
+m_game_plays_bling_awarded = Game developer bling pool award for <a href="#games-d_{0}">{1}</a>.
 
 #
 # Me page / Profile News Feed categories (see FeedMessageType.Category)
