--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -62,6 +62,7 @@ detailSubEdit = Edit
 detailRename = Rename
 
 detailInUse = This item is in use.
+# NOTE: links in translation messages are bad, they break Whirled, don't do this!
 detailInUseInRoom = This item is being used in <a href="#world-s{0}">{1}</a>.
 detailNotInUse = This item is not in use.
 
