Whirled has been copyright since 2007.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -21,7 +21,7 @@ landingTagline = Play games.  Make friends.  Make stuff.
 landingLevelUp = How do I level up?
 landingViewLeaderBoard = View entire leaderboard
 landingMoreGames = More Games
-landingCopyright = &copy; {0} Three Rings
+landingCopyright = &copy; 2007-{0} Three Rings
 landingAbout = About
 landingTerms = Terms & Conditions
 landingPrivacy = Privacy Policy
