Small improvement to the main shop page: add search & link to creator portal.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -6,9 +6,10 @@
 #
 # ShopPanel
 
-shopMarquee = Welcome to the Whirled Shop!
-shopIntro = Buy avatars, furniture for your room, pets, toys and everything in \
-  between to customize your experience in Whirled.
+shopMarquee = Whirled Shop
+shopIntro = Buy avatars, furniture, pets, toys, and more to customize your experience in \
+  Whirled.  You can also <a href="http://wiki.whirled.com/Portal:Creators">upload</a> \
+  and sell your own creations!
 
 shopTopAvatars = Top Avatars
 shopTopFurniture = Top Furniture
