Localize "Search" title text.

--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -11,6 +11,8 @@ logon = Please logon above to view Your Stuff.
 stuffTitle = My {0}
 stuffTitleMain = Stuff
 
+stuffSearch = Search
+
 #
 # InventoryPanel
 
