A new landing page to a/b test at #landing-split.  Design not finalized!

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -237,20 +237,6 @@ gameconFooterText = &copy; <a href="http://www.threerings.net">Three Rings Desig
   2001-2009.
   
 #
-# Game-centric landing page
-
-gamesCenterTitle = Play Games on<br/> Whirled!
-gamesCenterText = Just a few of the awesome<br/> games to play with your friends!
-gamesTagline = Play games.  Make friends.<br/>  Make stuff.
-
-#
-# Room-centric landing page
-
-roomsCenterTitle = Explore Rooms<br/> on Whirled!
-roomsCenterText = Just a few of the awesome rooms to explore with your friends!
-roomsTagline = Play games.  Make friends.<br/>  Make stuff.
-
-#
 # Design Your Whirled contest landing page
 
 designconIntroTitle = About the Contest
@@ -319,3 +305,26 @@ designconRulesText = \
 
 designconSignup = Sign Up  
 
+#
+# Split Landing Page
+splitIntro = Whirled is a virtual world where you can play games, chat with friends, and \
+  decorate your own space.<br/>  It''s <b>free</b> and runs right in your browser - no \
+  download required!
+  
+splitCreate = Everything on Whirled is made by the players: games, rooms, avatars, furniture, \
+  pets and more.<br/>  Anything you can imagine, you can create in Whirled.  You can even make \
+  real cash by selling your creations to other players, and earn fabulous prizes by entering \
+  our <a href="#me-contests">creator contests</a>.<br />  <a href="/#account-create">Join \
+  Whirled</a> now to get started!
+
+splitGamesTitle = Featured Games
+splitGamesPlay = Play Now!
+splitGamesBlurb = Whirled has over 200 games to play, with more added every day.  You can earn \
+  trophies, high scores and coins to spend in the Whirled shop.  \
+  <a href="#games">See more games</a>.  
+
+splitRoomsTitle = Featured Places
+splitRoomsVisit = Visit Now!
+splitRoomsBlurb = There are thousands of rooms to explore in Whirled, with all sorts of \
+  different themes and things to do.  You can meet new friends, chat and play games.  \
+  <a href="#rooms">See more rooms</a>.
