Media uploading/editing: - Moved the button to take a snapshot with your webcam out to the top-level HTML, where it's more visible.
Still need to finish full media upload revamp, to
rethink ImageChooserPopup.

Also, this is causing me annoyance:
- lining up flash and html buttons
- The button skin needs to be embedded in this new wee flash applet,
in addition to being embedded in another right next to it.
Probably I should just make the whole buttony area next to the
preview a flash applet, and have it do all the buttons.
But, this is still progress, so I'll check this in for now.

--- a/build.xml
+++ b/build.xml
@@ -688,6 +688,13 @@
     </antcall>
   </target>
 
+  <target name="camerabutton" depends="asprepare">
+    <antcall target="ascompile">
+      <param name="aspath" value="applets/CameraButtonApp.as"/>
+      <param name="swfname" value="camerabutton"/>
+    </antcall>
+  </target>
+
   <!-- builds our media uploader -->
   <target name="uploader" depends="asprepare">
     <antcall target="ascompile">
@@ -1014,7 +1021,7 @@
   <!-- TODO: the tutorial target has been removed from flashapps until it compiles again after a
        the API shuffle is done, and the tutorial code has been refactored -->
   <!-- builds top-level flash applications. -->
-  <target name="flashapps" depends="asprepare,mediastub,embedstub,videoplayer,audioplayer,remixer,imageeditor,uploader,asclient,asgclient"
+  <target name="flashapps" depends="asprepare,mediastub,embedstub,videoplayer,audioplayer,remixer,imageeditor,camerabutton,uploader,asclient,asgclient"
           description="Rebuilds all of our Flash clients and applets.">
   </target>
 
