--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -242,4 +242,4 @@ errPropNotFlash = Props must be a web-viewable image type.
 #
 # ItemMediaUploader
 editImage = Edit image
-createImage = Create a new image
+createImage = Paint a new image
