--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -306,6 +306,81 @@ designconRulesText = \
 designconSignup = Sign Up  
 
 #
+# Developer Introduction Landing page
+
+devintroWhatTitle = What is Whirled?
+devintroWhatText = \
+  <p><a href="/">Whirled</a> is a complete, self-serve Flash game development \
+  platform that enables you to build deep experiences, audience, and revenue. Using Whirled it \
+  is possible to create, manage, and monetize virtual items, single and multiplayer games, \
+  avatars, furnishings, and much more by selling directly to players. It was created by online \
+  indie gaming pioneers Three Rings Design, the developers of Puzzle Pirates, and represents \
+  years of micro-transaction learning packaged into a Flash development and billing \
+  framework.</p>\
+  \
+  <p>Whirled is designed to scale with your ambitions and how you want to grow your business. \
+  Whether you want to create a casual single player puzzle experience, a deep multiplayer \
+  action game based on micro-transactions, a full blown Flash MMO, or anything in between...\
+  we''ve got you covered. Create what you want at your own pace, price and deploy it however \
+  makes sense to you and your community.</p>\
+  \
+  <p>Three Rings is known as a strong advocate for open source and in addition to the full \
+  platform API set, complete code for all of our Whirled games is available for download from \
+  the <a href="http://wiki.whirled.com/Main_Page">Whirled wiki</a>. Whatever you want to build \
+  on Whirled, this expanding code library will help you get there.</p>
+
+devintroRevenueTitle = Building Revenue on Whirled
+devintroRevenueText = \
+  <img style="float: right;" alt="Funnel" src="/images/landing/devintro_revenue_funnel.jpg"/>\
+  <p>The Whirled billing engine supports over 50 different payment methods from around the \
+  world including credit cards, PayPal, mobile/premium SMS, and a large variety of prepaid \
+  cards. Three Rings player support is fully integrated as well so you can focus on building \
+  your brand and revenue without the headaches and overhead of billing, fraud, or customer \
+  service. All net revenue on Whirled is split four ways as per the graphic to the right. \
+  There are currently four ways to earn money on Whirled. You can make use of some or all of \
+  these methods at your discretion.</p>\
+  \
+  <h3>1. Games & Virtual Item Sales</h3>\
+  <p>By integrating specific Whirled APIs into your game, you can sell games, levels, and/or \
+  items. Additionally, you can sell a variety of virtual items such as avatars, toys, pets, \
+  and furniture outside of your game. You set the pricing for all of your work and have a \
+  variety of options for merchandising it.</p>\
+  <img style="margin: auto;" alt="Items" src="/images/landing/devintro_example_items.png"/>\
+  \
+  <h3>2. Affiliate Program</h3>\
+  <p>All content in Whirled can be embedded out to other sites, including your own. All \
+  embedded content is eligible for the Whirled affiliate program wherein the the affiliate \
+  earns 30% of lifetime net revenue on referred players. In other words, for every player \
+  you refer you earn 30% of whatever they spend within Whirled over the course of their \
+  lifetime on Whirled. In cases where you are both the affiliate and the developer of a given \
+  virtual item sale, your combined percentage would therefore be 60%.</p>\
+  \
+  <h3>3. Game Developer Bonus Pool</h3>\
+  <p>Every month, Three Rings will set aside a pool of money to be split among game developers \
+  in direct proportion to the number of gameplays their game represents of the overall total \
+  on Whirled. For November 2008, the Game Developer Bonus Pool is currently set at $10,000.</p>\
+  \
+  <h3>4. Contests</h3>\
+  <p>The dates for the first Whirled Flash Game Developer Challenge are from November 1, 2008 \
+  to January 31, 2009. The submission deadline is 11:59 PM PST on January 31, 2009.</p>
+  
+devintroExamplesTitle = Examples
+devintroExamplesText = \
+  <p><a href="#games-d_827">Corpse Craft</a> \
+  is an example of an original Whirled game that was built from scratch to leverage several \
+  powerful Whirled APIs including micro-transactions, multi-player, trophies, and more. \
+  <a href="#games-d_393_t">QBeez</a> is an example of an \
+  existing single player game that was not built for Whirled but has been modified to take \
+  advantage of micro-transactions by selling level packs and \
+  <a href="#shop-5_7_sqbeez">avatars</a> based on game characters.</p>
+
+devintroStartedTitle = Getting Started
+devintroStartedText = \
+  <p>Whirled is completely self-serve so you can develop and upload games content at your own \
+  pace. <a href="http://wiki.whirled.com/Main_Page">Click here</a> for details, APIs, and \
+  sample code.</p>
+
+#
 # Split Landing Page
 splitIntro = Whirled is a virtual world where you can play games, chat with friends, and \
   decorate your own space.<br/>  It''s <b>free</b> and runs right in your browser - no \
