Mention that Whirled is rated PG-13 without totally breaking the account signup form.

--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -25,8 +25,9 @@ createRealName = Real name (optional):
 createRealNameTip = Your real name will never be displayed in Whirled. \
   It is only used to help your friends find you.
 
-createDateOfBirth = Birthday:
-createDateOfBirthTip = You must be at least 13 years old to play in Whirled.
+createDateOfBirth = Birthday (<a href="http://wiki.whirled.com/Community_Standards">PG-13</a>):
+createDateOfBirthTip = You must be at least 13 years old to play in Whirled.  Whirled is \
+  rated PG-13.
   
 createPassword = Password:
 createPasswordTip = Don''t ever tell anyone your password, not even us! \
