Add "Invite Friends" link to top right of status panel.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -49,6 +49,7 @@ headerLogon = Logon!
 
 statusLogoff = Logoff
 statusHelp = Help
+statusInviteFriends = Invite Friends
 
 coinsTip = Your current Coins balance
 barsTip = Your current Bars balance
