New category in the Me feed: Discussion Posts, displays replies to thread posts you've made.  One feed item per post, no aggregation.

--- a/src/gwt/client/person/PersonMessages.properties
+++ b/src/gwt/client/person/PersonMessages.properties
@@ -55,6 +55,7 @@ groupAnnouncement = {0} announcement: {1}
 
 selfRoomComment = {0} commented on the room {1}.
 selfItemComment = {0} commented on the item {1}.
+selfForumReply = {0} replied to the discussion thread {1}
 
 # Gallery messages
 
