--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -399,8 +399,9 @@ feedCategory0 = Whirled & Group Announcements
 feedCategory1 = Comments
 feedCategory2 = Friendings
 feedCategory3 = New Shop Listings
-feedCategory4 = Game Trophies
-feedCategory5 = Updated Rooms
-feedCategory6 = Passport Stamps
-feedCategory7 = Group Medals
-feedCategory8 = Levelling
+feedCategory4 = Group Discussion Posts
+feedCategory5 = Game Trophies
+feedCategory6 = Updated Rooms
+feedCategory7 = Passport Stamps
+feedCategory8 = Group Medals
+feedCategory9 = Levelling
