Game contest deadline has moved forward from Jan 31 to Mar 31.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -160,13 +160,13 @@ gameconPrizesText = \
   <div style="clear: both;"><!-- clear --></div>
 
 gameconDatesTitle = Dates & Deadlines
-gameconDatesText = <p>The Whirled Flash Game Developer Challenge runs every three \
-  months. Games submitted to Whirled in a given three-month window are eligible for that \
-  quarter''s prizes. So, if you miss the first one, don''t worry! You can still enter the \
-  next one.</p> \
-  <p>The dates for the first Whirled Flash Game Developer Challenge are from \
-  November 1, 2008 to January 31, 2009. The submission deadline is 11:59 PM PST on \
-  January 31, 2009.</p>
+gameconDatesText = \
+  <p>The Whirled Flash Game Developer Challenge will be run periodically. Games which meet \
+  all the contest criteria and are submitted before the contest deadline will be eligible to \
+  compete for Challenge prizes in the period the game was submitted.</p>\
+  \
+  <p>The submission deadline for the first Whirled Flash Game Developer Challenge is 11:59 \
+  PM PST on March 31, 2009.</p>
   
 gameconConditionsTitle = Conditions
 gameconConditionsText = \
@@ -358,11 +358,11 @@ devintroRevenueText = \
   <h3>3. Game Developer Bonus Pool</h3>\
   <p>Every month, Three Rings will set aside a pool of money to be split among game developers \
   in direct proportion to the number of gameplays their game represents of the overall total \
-  on Whirled. For November 2008, the Game Developer Bonus Pool is currently set at $10,000.</p>\
+  on Whirled. For January 2009, the Game Developer Bonus Pool is currently set at $10,000.</p>\
   \
   <h3>4. Contests</h3>\
-  <p>The dates for the first Whirled Flash Game Developer Challenge are from November 1, 2008 \
-  to January 31, 2009. The submission deadline is 11:59 PM PST on January 31, 2009.</p>
+  <p>Whirled frequently runs contests for Flash creators.  <a href="#me-contests">Click \
+  here</a> to see the current contests.</p>
   
 devintroExamplesTitle = Examples
 devintroExamplesText = \
