Added new type of media to a game: splash media, which is displayed while the game is loading. If absent, the game's thumbnail will be displayed instead.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -97,9 +97,11 @@ gameServerClassTip = Full name of the class to instantiate (leave blank for defa
 errMediaNotABC = Server agent media must be a compiled actionscript binary (.abc) file.
 errServerMediaRequired = A server agent is required for this game.
 
-gameShotTab = Screenshot
-gameShotTitle = This is displayed on your game''s info page
-gameShotHint = The screenshot image must be {0}x{1}.
+gameShotLabel = Screenshot
+gameShotTip = Image displayed on your game''s info page
+gameSplashLabel = Splash Screen
+gameSplashTip = Image displayed while the game is loading
+gameImageHint = The image must be {0}x{1}.
 
 gameGenre = Genre
 gameGameType = Game Type
