Rearrange the status area of the header for pretty.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -47,9 +47,9 @@ headerLogon = Logon!
 #
 # StatusPanel
 
-statusLogoff = Logoff
+statusFriendsCoins = Invite your friends and earn coins! 
+statusLogoff = Sign Out
 statusHelp = Help
-statusInviteFriends = Invite Friends
 
 coinsTip = Your current Coins balance
 barsTip = Your current Bars balance
