Allow reporting stolen in the gwt interface.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -100,6 +100,7 @@ tagRemoveConfirm = Are you sure you would like to remove the tag {0}?
 tagFlag = Report...
 tagMatureFlag = Mature
 tagCopyrightFlag = Copyright
+tagStolenFlag = Stolen
 tagMaturePrompt1 = If you believe that this item should be marked as only visible to mature \
   members please report it for review.
 tagMaturePrompt2 = You may also enter an explanation as to why you believe the item should be \
@@ -109,6 +110,10 @@ tagCopyrightPrompt1 = If you believe that this item violates the rights of a cop
 tagCopyrightPrompt2 = Also, please provide an explanation as to why the item is in violation and \
   include a link to a reputable web site showing the copied material with proof of the date of \
   creation. This will greatly expedite the review process.
+tagStolenPrompt1 = If you believe that this item was stolen, \
+  please report it for review.
+tagStolenPrompt2 = Also, please provide an explanation as to why the item is in violation and \
+  include a link to the original source item.  This will greatly expedite the review process.
 tagFlagDialogTitle = Report Item
 tagFlagDialogAccept = Report
 tagSelectOne = Select one...
