Another round of visual changes to the top-right status area.

--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -50,6 +50,7 @@ headerLogon = Logon!
 statusFriendsCoins = Invite your friends and earn coins! 
 statusLogoff = Sign Out
 statusHelp = Help
+statusBuyBars = Buy Bars!
 
 coinsTip = Your current Coins balance
 barsTip = Your current Bars balance
