New option exposed in the game editor: table games that support 1 or more players can specify that the player start up in a single-player game, instead of the lobby.
We'll use this for CC and other games, which will throw the player right into
the game, and have an in-game option to open up the lobby and let them switch
to a multiplayer game if they want to.

--- a/src/gwt/client/editem/EditemMessages.properties
+++ b/src/gwt/client/editem/EditemMessages.properties
@@ -108,6 +108,7 @@ gameGameType = Game Type
 gameMinPlayers = Minimum players
 gameMaxPlayers = Maximum players
 gameWatchable = Watchable?
+gameAutoSingle = Start as single-player? 
 
 gameDefinition = Custom Parameters
 gameDefinitionError = Failed to parse your custom parameter: {0}
