Staff can now view player's inventory via a link from the #adminz-info page.  #stuff page args have changed from [itemType]_[page]_[query] to [itemType]_[memberId]_[page]_[query], still all optional.

--- a/src/gwt/client/stuff/StuffMessages.properties
+++ b/src/gwt/client/stuff/StuffMessages.properties
@@ -8,9 +8,9 @@
 
 logon = Please logon above to view Your Stuff.
 
-stuffTitle = My {0}
 stuffTitleMain = Stuff
-
+stuffTitlePlayer = Player''s {0}
+stuffTitle = My {0}
 stuffSearch = Search
 
 #
