Minor text change: "Staff Picks" instead of "Favorites" on main shop page.

--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -9,12 +9,12 @@
 shopMarquee = Whirled Shop
 shopIntro = Buy avatars, furniture, pets, toys, and more to customize your experience in \
   Whirled.  You can also <a href="http://wiki.whirled.com/Portal:Creators">upload</a> \
-  and sell your own creations!  Here are some of our staff''s favorite items:
+  and sell your own creations!
 
-shopTopAvatars = Fave Avatars
-shopTopFurniture = Fave Furniture
-shopFeatPet = Favorite Pet
-shopFeatToy = Favorite Toy
+shopTopAvatars = Staff Pick Avatars
+shopTopFurniture = Staff Pick Furniture
+shopFeatPet = Staff Pick Pet
+shopFeatToy = Staff Pick Toy
 
 shopRank = {0}.
 shopBuy = Buy!
