Minor text changes to My Friends Online section of the main me page.

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -31,8 +31,8 @@ populationFriends = {0}, including:
 viewProfile = View Profile
 goToGame = Join {0}''s Game
 
-friendIn = in {0}
-friendPlaying = playing {0}
+friendIn = In {0}
+friendPlaying = Playing {0}
 
 newsTitle = My News
 
