Err, these local changes were not meant to be committed.

--- a/etc/log4j.properties
+++ b/etc/log4j.properties
@@ -14,14 +14,4 @@ log4j.appender.console.layout.ConversionPattern = %d %p %C{1}: %m%n
 log4j.logger.org.quartz = WARN
 
 # Specify logging levels as desired
-# log4j.logger.net.sf.ehcache = DEBUG
-
-log4j.logger.net.sf.ehcache=INFO, EHCACHE
-
-log4j.appender.EHCACHE=org.apache.log4j.FileAppender
-log4j.appender.EHCACHE.File=ehcache-log.txt
-log4j.appender.EHCACHE.Append=true
-log4j.appender.EHCACHE.Threshold=DEBUG
-log4j.appender.EHCACHE.layout=org.apache.log4j.PatternLayout
-log4j.appender.EHCACHE.layout.ConversionPattern=%-5p %C{1}:%L - %m\n
-
+# log4j.logger.com.threerings.foo = info
