--- a/etc/logging.properties
+++ b/etc/logging.properties
@@ -37,7 +37,7 @@ java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = java.util.logging.XMLFormatter
 
 # The console accepts everything; make sure to configure verbosity at the package level
-java.util.logging.ConsoleHandler.level = FINEST
+java.util.logging.ConsoleHandler.level = FINE
 java.util.logging.ConsoleHandler.formatter = com.samskivert.util.OneLineLogFormatter
 
 ############################################################
@@ -46,7 +46,7 @@ java.util.logging.ConsoleHandler.formatter = com.samskivert.util.OneLineLogForma
 ############################################################
 
 # No longer spam ourselves with ehcache's distributed invalidation stuff
-net.sf.ehcache.distribution.level = FINEST
+net.sf.ehcache.distribution.level = INFO
 
 # Only log the warnings from the address book importer
 octazen.level = WARNING
